<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_10"
    android:layout_margin="@dimen/_10"
    android:background="@drawable/rectangle">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_monthly_budget"
        android:layout_marginTop="@dimen/_20"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/_15"
        android:layout_marginRight="@dimen/_15"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_15"
        android:layout_marginRight="@dimen/_15"
        android:padding="@dimen/_5"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monthly_budget"
            android:textColor="@android:color/black"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/rupee_invoice"/>
        <EditText
            android:layout_width="@dimen/_70"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:maxLength="@string/_6"
            android:id="@+id/edittext_budget_amount"
            android:inputType="number"
            >
            <requestFocus/>
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seek_bar"
            android:padding="@dimen/_5"
            android:layout_marginRight="@dimen/_10"
            android:layout_marginLeft="@dimen/_5"
            android:layout_marginEnd="@dimen/_10"
            android:layout_marginStart="@dimen/_5" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_10"
            android:weightSum="@string/_9">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="@string/_1"
                android:gravity="center"
                android:textSize="@dimen/_10s"
                android:text="@string/_0"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="@string/_1"
                android:gravity="center"
                android:textSize="@dimen/_10s"
                android:text="@string/_25k"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="@string/_1"
                android:gravity="center"
                android:textSize="@dimen/_10s"
                android:text="@string/_50k"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="@string/_1"
                android:gravity="center"
                android:textSize="@dimen/_10s"
                android:text="@string/_75k"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="@string/_1"
                android:textSize="@dimen/_10s"
                android:gravity="center"
                android:text="@string/_1l"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="@string/_1"
                android:textSize="@dimen/_10s"
                android:gravity="center"
                android:text="@string/_1_25l"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="@string/_1"
                android:gravity="center"
                android:textSize="@dimen/_10s"
                android:text="1.50L"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="@string/_1"
                android:textSize="@dimen/_10s"
                android:gravity="center"
                android:text="@string/_1_75l"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="@string/_1"
                android:textSize="@dimen/_10s"
                android:gravity="center"
                android:text="@string/_2l"/>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10"
        android:layout_marginTop="@dimen/_10">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/_15"
            android:text="@string/set"
            android:textStyle="bold"
            android:clickable="true"
            android:id="@+id/set_budget"
            android:background="@android:color/white"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/set_budget"
            android:layout_marginRight="@dimen/_15"
            android:text="@string/cancel"
            android:id="@+id/cancel"
            android:clickable="true"
            android:textStyle="bold"
            android:background="@android:color/white"
            android:textColor="@color/colorPrimaryDark"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15"
            android:layout_marginRight="@dimen/_15"
            android:text="@string/amount_cannot_be_empty"
            android:id="@+id/warning_amount"
            android:clickable="true"
            android:textStyle="bold"
            android:visibility="gone"
            android:textColor="@android:color/holo_red_light"/>

    </RelativeLayout>


</LinearLayout>