<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbarThumbVertical="@color/lightYellow"
    android:scrollbarSize="2dp"
    android:layout_margin="@dimen/_10"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ScrollView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:android="http://schemas.android.com/apk/res/android" >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dialog_top"
                android:background="@drawable/amount_dialog_top">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_toLeftOf="@id/yellowView">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="0"
                        android:layout_marginTop="@dimen/_40"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_30"
                        android:textColorHint="@android:color/white"
                        android:id="@+id/dialog_amount_text"
                        android:paddingRight="@dimen/_10"
                        android:inputType="textMultiLine"
                        android:gravity="end"
                        android:paddingLeft="@dimen/_10"/>
                </LinearLayout>
                <View
                    android:layout_width="2dp"
                    android:layout_height="100dp"
                    android:layout_toLeftOf="@id/backspace"
                    android:background="@color/lightYellow"
                    android:layout_marginTop="@dimen/_10"
                    android:layout_marginBottom="@dimen/_10"
                    android:layout_centerVertical="true"
                    android:id="@+id/yellowView"></View>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_backspace"
                    android:layout_centerInParent="true"
                    android:layout_alignParentRight="true"
                    android:paddingRight="@dimen/_10"
                    android:paddingLeft="@dimen/_10"
                    android:clickable="true"
                    android:onClick="addNumber"
                    android:id="@+id/backspace"/>
            </RelativeLayout>
        </ScrollView>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/amount_dialog_centre">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <TableRow android:weightSum="3"
                        android:layout_marginTop="@dimen/_10"
                        android:layout_width="wrap_content">
                        <TextView
                            style="@style/amountDialogNumbers"
                            android:id="@+id/_1"
                            android:text="@string/_1"
                           />
                        <TextView
                            style="@style/amountDialogNumbers"
                            android:id="@+id/_2"
                            android:text="@string/_2"/>
                        <TextView
                            style="@style/amountDialogNumbers"
                            android:id="@+id/_3"
                            android:text="@string/_3"/>
                    </TableRow>
                    <TableRow android:weightSum="3"
                        android:layout_marginTop="@dimen/_10">
                        <TextView
                            style="@style/amountDialogNumbers"
                            android:id="@+id/_4"
                            android:text="@string/_4"/>
                        <TextView
                            style="@style/amountDialogNumbers"
                            android:id="@+id/_5"
                            android:text="@string/_5"/>
                        <TextView
                            style="@style/amountDialogNumbers"
                            android:id="@+id/_6"
                            android:text="@string/_6"/>
                    </TableRow>
                    <TableRow android:weightSum="3"
                        android:layout_marginTop="@dimen/_10">
                        <TextView
                            android:text="@string/_7"
                            style="@style/amountDialogNumbers"
                            android:id="@+id/_7"
                            />
                        <TextView
                            style="@style/amountDialogNumbers"
                            android:id="@+id/_8"
                            android:text="@string/_8"/>
                        <TextView
                            style="@style/amountDialogNumbers"
                            android:id="@+id/_9"
                            android:text="@string/_9"/>
                    </TableRow>
                    <TableRow android:weightSum="3"
                        android:layout_marginTop="@dimen/_10">
                        <TextView
                            android:text="."
                            style="@style/amountDialogNumbers"
                            />
                        <TextView
                            style="@style/amountDialogNumbers"
                            android:id="@+id/_0"
                            android:text="@string/_0"/>
                        <TextView
                            style="@style/amountDialogNumbers"
                            android:id="@+id/_00"
                            android:text="@string/_00"/>
                    </TableRow>
                </TableLayout>
            </LinearLayout>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_5"
            android:background="@color/lightGray"></View>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/amount_dialog_bottom"
            android:layout_marginBottom="@dimen/_10">
            <TextView
                style="@style/amountDialogBottom"
                android:text="@string/clear"
                android:layout_marginLeft="@dimen/_20"
                android:id="@+id/clear"/>

            <TextView
                style="@style/amountDialogBottom"
                android:text="@string/cancel"
                android:layout_toLeftOf="@id/okay"
                android:layout_marginRight="@dimen/_20"
                android:id="@+id/cancel"
                />
            <TextView
                style="@style/amountDialogBottom"
                android:text="@string/okay"
                android:textColor="@color/primaryBlue"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/_20"
                android:id="@+id/okay"
                />
        </RelativeLayout>


    </LinearLayout>
</ScrollView>
