<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rectangle"
    android:layout_margin="@dimen/_20"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_category"
        android:textStyle="bold"
        android:layout_margin="@dimen/_10"
        android:textColor="@android:color/black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/warning"
        android:padding="@dimen/_5"
        android:layout_marginLeft="@dimen/_10"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:id="@+id/delete"
            android:textStyle="bold"
            android:layout_marginRight="@dimen/_20"
            android:textColor="@color/primaryRed"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/_20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/delete"
            android:id="@+id/cancel"
            android:layout_marginRight="@dimen/_20"
            android:textStyle="bold"
            android:textColor="@color/primaryBlue"
            android:text="@string/cancel"
            android:layout_marginEnd="@dimen/_20"
            android:layout_toStartOf="@id/delete" />
    </RelativeLayout>
</LinearLayout>